--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -398,7 +398,7 @@ template {
   padding-right: 30px;
 }
 
-.services {
+.link_arrow {
   display: inline-block;
   font-weight: 700;
   font-size: 14px;
@@ -430,10 +430,10 @@ template {
   margin-bottom: 10px;
 }
 
-.service_active:hover .services {
+.service_active:hover .link_arrow {
   color: #F0145A;
 }
-.service_active:hover .services::after {
+.service_active:hover .link_arrow::after {
   background-image: url(../images/arrow_red.png);
 }
 
@@ -856,42 +856,14 @@ body {
   display: none;
 }
 
-.link_team {
-  display: inline-block;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 17px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  color: #24A3FF;
-  padding-right: 14px;
-  margin: 0;
-  position: relative;
-  text-decoration: none;
-}
-
-.link_team::after {
-  content: "";
-  background-image: url(../images/arrow_blue.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 12px;
-  height: 12px;
-  position: absolute;
-  right: 0;
-  top: 48%;
-  margin-top: -6px;
-}
-
 .link_team_active {
   margin-bottom: 5px;
 }
 
-.link_team_active:hover .link_team {
+.link_team_active:hover .link_arrow {
   color: #F0145A;
 }
-.link_team_active:hover .link_team::after {
+.link_team_active:hover .link_arrow::after {
   background-image: url(../images/arrow_red.png);
 }
 
@@ -994,42 +966,10 @@ body {
   padding-top: 30px;
 }
 
-.tell_link {
-  display: inline-block;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 17px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  color: #24A3FF;
-  padding-right: 14px;
-  margin: 0;
-  position: relative;
-  text-decoration: none;
-}
-
-.tell_link::after {
-  content: "";
-  background-image: url(../images/arrow_blue.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 12px;
-  height: 12px;
-  position: absolute;
-  right: 0;
-  top: 48%;
-  margin-top: -6px;
-}
-
-.tell_link {
-  margin-bottom: 5px;
-}
-
-.tell_link_active:hover .tell_link {
+.tell_link_active:hover .link_arrow {
   color: #F0145A;
 }
-.tell_link_active:hover .tell_link::after {
+.tell_link_active:hover .link_arrow::after {
   background-image: url(../images/arrow_red.png);
 }
 
@@ -1116,6 +1056,9 @@ body {
   }
   .card:last-child {
     width: 100%;
+  }
+  .tell_link_active {
+    margin-bottom: 10px;
   }
 }
 @media (min-width: 1024px) {
