--- a/assets/SASS/_better.scss
+++ b/assets/SASS/_better.scss
@@ -1,4 +1,5 @@
 @use 'sass:map';
+@import '../SASS/construction/link';
 
 @mixin icon {
     display: flex;
@@ -64,32 +65,12 @@ $icons: (
     padding-right: 30px;
 }
 
-.services {
-    display: inline-block;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 17px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: #24A3FF;
-    padding-right: 14px;
-    margin: 0;
-    position: relative;
-    text-decoration: none;
+.link_arrow {
+    @include link;
 }
 
 .services::after {
-    content: '';
-    background-image: url(../images/arrow_blue.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 12px;
-    height: 12px;
-    position: absolute;
-    right: 0;
-    top: 48%;
-    margin-top: -6px;
+    @include link_after;
 }
 
 .service_active {
@@ -97,13 +78,7 @@ $icons: (
 }
 
 .service_active:hover {
-     .services {
-        color: #F0145A;  
-    }
-    
-    .services::after {
-        background-image: url(../images/arrow_red.png); 
-    }
+    @include link_hover;
 }
 
 .hero {
