--- a/assets/SASS/to_tell.scss
+++ b/assets/SASS/to_tell.scss
@@ -1,3 +1,5 @@
+@import '../SASS/construction/link';
+
 .bg_tell {
     background-color: #F5F5FA;
 }
@@ -9,46 +11,8 @@
     padding-top: 30px;
 }
 
-.tell_link {
-    display: inline-block;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 17px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: #24A3FF;
-    padding-right: 14px;
-    margin: 0;
-    position: relative;
-    text-decoration: none;
-}
-
-.tell_link::after {
-    content: '';
-    background-image: url(../images/arrow_blue.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 12px;
-    height: 12px;
-    position: absolute;
-    right: 0;
-    top: 48%;
-    margin-top: -6px;
-}
-
-.tell_link {
-    margin-bottom: 5px;
-}
-
 .tell_link_active:hover {
-     .tell_link {
-        color: #F0145A;  
-    }
-    
-    .tell_link::after {
-        background-image: url(../images/arrow_red.png); 
-    }
+    @include link_hover
 }
 
 .hero_tell {
@@ -139,6 +103,10 @@
 
     .card:last-child {
         width: 100%;
+    }
+
+    .tell_link_active {
+        margin-bottom: 10px;
     }
 }
 
