--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1084,5 +1084,261 @@ body {
     margin-right: auto;
   }
 }
+.main_bg {
+  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%);
+  position: relative;
+  z-index: 0;
+}
+
+.high_heder {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: rgba(245, 245, 250, 0.2);
+  z-index: 5;
+}
+
+.symbol {
+  position: absolute;
+  z-index: -5;
+  width: 100%;
+}
+
+.active_lang {
+  padding: 5px 7px;
+  background-color: #F0145A;
+  border-radius: 8px;
+}
+
+.lang {
+  display: flex;
+  padding-left: 15px;
+  font-size: 0;
+}
+
+.lang a {
+  text-decoration: none;
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: center;
+  letter-spacing: 1px;
+  padding: 5px 7px 5px 7px;
+}
+
+.tel {
+  padding: 12px 15px 12px 0;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: right;
+  color: #FFFFFF;
+}
+
+.lower_heder {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 22px;
+  padding-left: 15px;
+}
+
+.burger_line {
+  width: 18px;
+  height: 0px;
+  border: 1px solid #FFFFFF;
+  margin-bottom: 6px;
+}
+
+.burger_line:last-child {
+  margin-bottom: 0px;
+}
+
+.main_page {
+  margin-bottom: 30px;
+}
+
+.main_page_box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 600px;
+}
+
+.main_hero {
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 46px;
+  text-align: center;
+  color: #FFFFFF;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin: 0px;
+}
+
+.btn_wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main_button {
+  opacity: 0.5;
+  border: 2px solid #FFFFFF;
+  width: 42px;
+  height: 42px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100px;
+  padding: 18px 12px 15px 12px;
+  background: transparent;
+  margin-bottom: 30px;
+}
+
+.button_arrow {
+  border: 2px solid #FFFFFF;
+}
+
+.nav {
+  padding-top: 60px;
+}
+
+.wrapper_nav {
+  width: auto;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.nav_box {
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+  padding-bottom: 30px;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.nav_box::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.hero_nav {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 37px;
+  color: #B3B3BA;
+  text-decoration: none;
+  margin-left: 30px;
+}
+
+.hero_nav:first-child {
+  margin-left: 0;
+}
+
+.hero_nav_active {
+  background: linear-gradient(90.13deg, #EF8080 0.84%, #F0145A 99.96%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.line_box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.nav_line {
+  width: 100%;
+  height: 4px;
+  background: rgba(255, 255, 255, 0.3);
+  margin-bottom: 30px;
+}
+
+.nav_h2 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.nav_text {
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 30px;
+  color: #FFFFFF;
+  margin: 0;
+}
+
+@media (min-width: 768px) {
+  .wrapper_nav {
+    width: auto;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+  .nav_box {
+    padding-left: 60px;
+    padding-bottom: 60px;
+  }
+  .nav_line {
+    margin-bottom: 60px;
+  }
+  .line_box {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+  .nav_h2 {
+    font-size: 30px;
+    line-height: 37px;
+  }
+  .hero_nav {
+    font-size: 38px;
+    line-height: 46px;
+  }
+}
+@media (min-width: 1024px) {
+  .wrapper_nav {
+    padding: 0;
+    width: 405px;
+  }
+  .nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .nav_line {
+    width: 303px;
+    margin: 0;
+  }
+  .line_box {
+    display: none;
+  }
+  .nav_box {
+    flex-direction: column;
+    overflow: visible;
+    padding: 0;
+    padding-right: 60px;
+    border-right: 4px solid rgba(255, 255, 255, 0.3);
+  }
+  .hero_nav {
+    text-align: right;
+    margin-bottom: 30px;
+    margin-right: 0;
+    margin-left: auto;
+  }
+  .hero_nav:first-child {
+    margin-left: auto;
+  }
+  .wrapper_nav {
+    margin-left: 60px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
