--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -378,10 +378,10 @@ template {
 .better {
   padding-top: 30px;
   padding-bottom: 60px;
-  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
-  border-radius: 0px 0px 12px 12px;
   position: relative;
   margin-bottom: 50px;
+  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+  border-radius: 0px 0px 12px 12px;
 }
 
 .services_box {
@@ -1085,7 +1085,7 @@ body {
   }
 }
 .main_bg {
-  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%);
+  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
   position: relative;
   z-index: 0;
 }
@@ -1258,6 +1258,7 @@ body {
   height: 4px;
   background: rgba(255, 255, 255, 0.3);
   margin-bottom: 30px;
+  display: block;
 }
 
 .nav_h2 {
@@ -1306,26 +1307,29 @@ body {
 @media (min-width: 1024px) {
   .wrapper_nav {
     padding: 0;
-    width: 405px;
+    margin-left: 60px;
   }
   .nav {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-left: 60px;
+    padding-right: 60px;
   }
   .nav_line {
-    width: 303px;
-    margin: 0;
+    display: none;
   }
   .line_box {
-    display: none;
+    width: 4px;
+    height: 303px;
+    background-color: rgba(255, 255, 255, 0.3);
+    padding: 0;
   }
   .nav_box {
     flex-direction: column;
     overflow: visible;
     padding: 0;
-    padding-right: 60px;
-    border-right: 4px solid rgba(255, 255, 255, 0.3);
+    margin-right: 60px;
   }
   .hero_nav {
     text-align: right;
@@ -1336,8 +1340,20 @@ body {
   .hero_nav:first-child {
     margin-left: auto;
   }
-  .wrapper_nav {
-    margin-left: 60px;
+}
+@media (min-width: 1440px) {
+  .nav {
+    padding-left: 180px;
+    padding-right: 180px;
+  }
+}
+@media (min-width: 1920px) {
+  .nav {
+    width: 1360px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
