--- a/assets/SASS/_nav.scss
+++ b/assets/SASS/_nav.scss
@@ -55,6 +55,7 @@
     height: 4px;
     background: rgba(255, 255, 255, 0.3);
     margin-bottom: 30px;
+    display: block;
 }
 .nav_h2 {
     font-weight: 700;
@@ -108,30 +109,33 @@
 @media (min-width:1024px) {   
     .wrapper_nav {
         padding: 0;
-        width: 405px;
+        margin-left: 60px;
     }
 
     .nav {
         display: flex;
         align-items: center;
         justify-content: center;
+        padding-left: 60px;
+        padding-right: 60px;
     }
 
     .nav_line {
-        width: 303px;
-        margin: 0;
+       display: none;
     }
 
     .line_box {
-        display: none;
+        width: 4px;
+        height: 303px;
+        background-color: rgba(255, 255, 255, 0.3);
+        padding: 0;
     }
 
     .nav_box {
         flex-direction: column;
         overflow: visible;
         padding: 0;
-        padding-right: 60px;
-        border-right: 4px solid rgba(255, 255, 255, 0.3);
+        margin-right: 60px;
     }
 
     .hero_nav {
@@ -144,8 +148,22 @@
     .hero_nav:first-child {
         margin-left: auto;
     }
+}
 
-    .wrapper_nav {
-        margin-left: 60px;
+@media (min-width:1440px) {
+    .nav {
+        padding-left: 180px;
+        padding-right: 180px;
     }
 }
+
+@media (min-width:1920px) {
+    .nav {
+        width: 1360px;
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
