--- a/assets/SASS/_team.scss
+++ b/assets/SASS/_team.scss
@@ -121,9 +121,10 @@
     }
 
     .wrapper_team {
-        width: 1920px;
+        width: 1600px;
         margin-left: auto;
         margin-right: auto;
+        padding: 0;
     }
 }
     
