--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -380,8 +380,6 @@ template {
   padding-bottom: 60px;
   position: relative;
   margin-bottom: 50px;
-  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
-  border-radius: 0px 0px 12px 12px;
 }
 
 .services_box {
@@ -950,9 +948,10 @@ body {
     width: 400px;
   }
   .wrapper_team {
-    width: 1920px;
+    width: 1600px;
     margin-left: auto;
     margin-right: auto;
+    padding: 0;
   }
 }
 .bg_tell {
@@ -1079,13 +1078,15 @@ body {
 }
 @media (min-width: 1920px) {
   .wrapper_tell {
-    width: 1920px;
+    width: 1600px;
     margin-left: auto;
     margin-right: auto;
+    padding: 0;
   }
 }
 .main_bg {
   background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+  border-radius: 0px 0px 12px 12px;
   position: relative;
   z-index: 0;
 }
@@ -1322,8 +1323,8 @@ body {
   .line_box {
     width: 4px;
     height: 303px;
-    background-color: rgba(255, 255, 255, 0.3);
     padding: 0;
+    border-right: 3px solid rgba(255, 255, 255, 0.3);
   }
   .nav_box {
     flex-direction: column;
