--- a/assets/SASS/_heder.scss
+++ b/assets/SASS/_heder.scss
@@ -1,5 +1,6 @@
 .main_bg {
     background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+    border-radius: 0px 0px 12px 12px;
     position: relative;
     z-index: 0;
 }
