--- a/assets/SASS/_nav.scss
+++ b/assets/SASS/_nav.scss
@@ -127,8 +127,8 @@
     .line_box {
         width: 4px;
         height: 303px;
-        background-color: rgba(255, 255, 255, 0.3);
         padding: 0;
+        border-right: 3px solid rgba(255, 255, 255, 0.3);
     }
 
     .nav_box {
