--- a/assets/SASS/to_tell.scss
+++ b/assets/SASS/to_tell.scss
@@ -132,9 +132,10 @@
 
 @media (min-width:1920px) {
     .wrapper_tell {
-        width: 1920px;
+        width: 1600px;
         margin-left: auto;
         margin-right: auto;
+        padding: 0;
     }
 }
 
