--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -292,7 +292,7 @@ template {
 }
 
 .icon_one {
-  background-image: url("../images/icons/one.png");
+  background-image: url("../images/icons/one.svg");
   display: flex;
   justify-content: left;
   align-items: center;
@@ -306,7 +306,7 @@ template {
 }
 
 .icon_two {
-  background-image: url("../images/icons/two.png");
+  background-image: url("../images/icons/two.svg");
   display: flex;
   justify-content: left;
   align-items: center;
@@ -320,7 +320,7 @@ template {
 }
 
 .icon_three {
-  background-image: url("../images/icons/three.png");
+  background-image: url("../images/icons/three.svg");
   display: flex;
   justify-content: left;
   align-items: center;
@@ -334,7 +334,7 @@ template {
 }
 
 .icon_four {
-  background-image: url("../images/icons/four.png");
+  background-image: url("../images/icons/four.svg");
   display: flex;
   justify-content: left;
   align-items: center;
@@ -348,7 +348,7 @@ template {
 }
 
 .icon_five {
-  background-image: url("../images/icons/five.png");
+  background-image: url("../images/icons/five.svg");
   display: flex;
   justify-content: left;
   align-items: center;
@@ -362,7 +362,7 @@ template {
 }
 
 .icon_six {
-  background-image: url("../images/icons/six.png");
+  background-image: url("../images/icons/six.svg");
   display: flex;
   justify-content: left;
   align-items: center;
@@ -1216,6 +1216,7 @@ body {
   display: flex;
   align-items: center;
   padding-left: 30px;
+  padding-right: 30px;
   padding-bottom: 30px;
   overflow-x: auto;
   white-space: nowrap;
@@ -1256,13 +1257,13 @@ body {
   align-items: center;
   padding-left: 30px;
   padding-right: 30px;
+  margin-bottom: 30px;
 }
 
 .nav_line {
   width: 100%;
   height: 4px;
   background: rgba(255, 255, 255, 0.3);
-  margin-bottom: 30px;
   display: block;
 }
 
@@ -1286,19 +1287,18 @@ body {
 @media (min-width: 768px) {
   .wrapper_nav {
     width: auto;
-    padding-left: 60px;
+    padding-right: 60px;
     padding-right: 60px;
   }
   .nav_box {
     padding-left: 60px;
+    padding-right: 60px;
     padding-bottom: 60px;
-  }
-  .nav_line {
-    margin-bottom: 60px;
   }
   .line_box {
     padding-left: 60px;
     padding-right: 60px;
+    margin-bottom: 60px;
   }
   .nav_h2 {
     font-size: 30px;
@@ -1329,12 +1329,16 @@ body {
     height: 303px;
     padding: 0;
     border-right: 3px solid rgba(255, 255, 255, 0.3);
+    margin-bottom: 0;
   }
   .nav_box {
     flex-direction: column;
     overflow: visible;
     padding: 0;
     margin-right: 60px;
+  }
+  .hero_nav:last-child {
+    margin-bottom: 0;
   }
   .hero_nav {
     text-align: right;
@@ -1378,6 +1382,7 @@ body {
   display: flex;
   justify-content: space-between;
   font-size: 0;
+  margin-bottom: 30px;
 }
 
 .hero_form {
@@ -1389,7 +1394,6 @@ body {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   margin: 0;
-  margin-bottom: 30px;
 }
 
 .close {
