--- a/assets/SASS/_nav.scss
+++ b/assets/SASS/_nav.scss
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     padding-left: 30px;
+    padding-right: 30px;
     padding-bottom: 30px;
     overflow-x: auto;
     white-space: nowrap;
@@ -52,13 +53,13 @@
     align-items: center;
     padding-left: 30px;
     padding-right: 30px;
+    margin-bottom: 30px;
 }
 
 .nav_line {
     width: 100%;
     height: 4px;
     background: rgba(255, 255, 255, 0.3);
-    margin-bottom: 30px;
     display: block;
 }
 .nav_h2 {
@@ -81,22 +82,20 @@
 @media (min-width:768px) {
     .wrapper_nav {
         width: auto;
-        padding-left: 60px;
+        padding-right: 60px;
         padding-right: 60px;
     }
     
     .nav_box {
         padding-left: 60px;
+        padding-right: 60px;
         padding-bottom: 60px;
-    }
-
-    .nav_line {
-        margin-bottom: 60px;
     }
 
     .line_box {
         padding-left:60px;
         padding-right: 60px;
+        margin-bottom: 60px;
     }
 
     .nav_h2 {
@@ -133,6 +132,7 @@
         height: 303px;
         padding: 0;
         border-right: 3px solid rgba(255, 255, 255, 0.3);
+        margin-bottom: 0;
     }
 
     .nav_box {
@@ -140,6 +140,10 @@
         overflow: visible;
         padding: 0;
         margin-right: 60px;
+    }
+
+    .hero_nav:last-child {
+        margin-bottom: 0;
     }
 
     .hero_nav {
