--- a/assets/SASS/_nav.scss
+++ b/assets/SASS/_nav.scss
@@ -82,7 +82,7 @@
 @media (min-width:768px) {
     .wrapper_nav {
         width: auto;
-        padding-right: 60px;
+        padding-left: 60px;
         padding-right: 60px;
     }
     
