--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1103,6 +1103,8 @@ body {
   position: absolute;
   z-index: -5;
   width: 100%;
+  height: 100vh;
+  background-size: cover;
 }
 
 .active_lang {
@@ -1145,17 +1147,6 @@ body {
   padding-left: 15px;
 }
 
-.burger_line {
-  width: 18px;
-  height: 0px;
-  border: 1px solid #FFFFFF;
-  margin-bottom: 6px;
-}
-
-.burger_line:last-child {
-  margin-bottom: 0px;
-}
-
 .main_page {
   margin-bottom: 30px;
 }
@@ -1164,7 +1155,12 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 600px;
+  height: 100vh;
+  content: "";
+  background-image: url(../images/heder/Symbol.svg);
+  background-size: cover;
+  background-position-x: 100%;
+  background-repeat: no-repeat;
 }
 
 .main_hero {
@@ -1200,10 +1196,6 @@ body {
 
 .button_arrow {
   border: 2px solid #FFFFFF;
-}
-
-.nav {
-  padding-top: 60px;
 }
 
 .wrapper_nav {
@@ -1467,6 +1459,219 @@ body {
   text-align: center;
   color: #FFFFFF;
   border: 0;
+}
+
+.burger_line {
+  width: 18px;
+  height: 0px;
+  border: 1px solid #FFFFFF;
+  margin-bottom: 5px;
+}
+
+.burger_line:last-child {
+  margin-bottom: 0px;
+}
+
+.burger_menu_dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown_links {
+  display: flex;
+  background-color: #FFFFFF;
+  border-radius: 12px;
+  padding: 12px;
+  flex-direction: column;
+  text-align: center;
+}
+
+.drop_box {
+  position: absolute;
+  display: none;
+  right: calc(100% - 20px);
+  padding-top: 30px;
+}
+
+.dropdown_links a {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  color: #24A3FF;
+  text-decoration: none;
+  background: #F5F5FA;
+  border-radius: 12px;
+  width: 335px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  margin-bottom: 15px;
+}
+
+.dropdown_links a:hover {
+  background: #E6E6F0;
+  border-radius: 12px;
+}
+
+.dropdown_links a:last-child {
+  margin-bottom: 0px;
+}
+
+.burger_menu_dropdown:hover .drop_box {
+  display: block;
+}
+
+.close_menu {
+  display: flex;
+  justify-content: right;
+  margin-bottom: 20px;
+}
+
+.footer_wrapper {
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+.footer_box {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.footer_line {
+  width: 100%;
+  height: 2px;
+  background: #E6E6F0;
+  margin-bottom: 30px;
+}
+
+.footer_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.stret_map {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.street {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #323264;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.separator {
+  width: 6px;
+  height: 6px;
+  background: #B3B3BA;
+  border: 1px;
+  border-radius: 100px;
+  display: none;
+}
+
+.footer_text {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #24A3FF;
+  margin: 0;
+}
+
+.footer_map {
+  margin-bottom: 21px;
+}
+
+.resolution_357_footer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.fb_logo {
+  width: 38px;
+  height: 38px;
+  margin-bottom: 10px;
+}
+
+.footer_tel {
+  color: #46466E;
+  margin-bottom: 10px;
+}
+
+.contact {
+  margin-bottom: 30px;
+}
+
+.footer_text_light {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #B3B3BA;
+}
+
+.resolution_box {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .footer_wrapper {
+    margin-right: 60px;
+    margin-left: 60px;
+  }
+  .footer_info {
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 21px;
+  }
+  .stret_map {
+    flex-direction: row;
+    justify-content: left;
+    gap: 10px;
+  }
+  .street {
+    margin: 0;
+  }
+  .separator {
+    display: block;
+  }
+  .footer_map {
+    margin: 0;
+  }
+  .resolution_357_footer {
+    display: none;
+  }
+  .resolution_box {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+  .footer_tel {
+    margin: 0;
+  }
+  .contact {
+    margin: 0;
+  }
+  .fb_logo {
+    margin: 0;
+  }
+}
+@media (min-width: 1920px) {
+  .footer_wrapper {
+    width: 1600px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
