--- a/assets/SASS/_heder.scss
+++ b/assets/SASS/_heder.scss
@@ -17,6 +17,8 @@
     position: absolute;
     z-index: -5;
     width: 100%;
+    height: 100vh;
+    background-size: cover;
 }
 
 .active_lang{
@@ -57,15 +59,4 @@
     align-items: center;
     padding-right: 22px;
     padding-left: 15px;
-}
-
-.burger_line {
-    width: 18px;
-    height: 0px;
-    border: 1px solid #FFFFFF;
-    margin-bottom: 6px;
-}
-
-.burger_line:last-child {
-    margin-bottom: 0px;
 }
