--- a/assets/SASS/_main_page.scss
+++ b/assets/SASS/_main_page.scss
@@ -6,7 +6,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 600px;
+    height: 100vh;
+    content: '';
+    background-image: url(../images/heder/Symbol.svg);
+    background-size: cover;
+    background-position-x: 100%;
+    background-repeat: no-repeat;
 }
 
 .main_hero {
