--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1021,7 +1021,6 @@ body {
 }
 
 .line {
-  width: 100%;
   height: 4px;
   background-color: #E6E6F0;
   margin-bottom: 15px;
@@ -1082,6 +1081,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 0;
+    padding-top: 30px;
   }
 }
 .main_bg {
