--- a/assets/SASS/_to_tell.scss
+++ b/assets/SASS/_to_tell.scss
@@ -65,7 +65,6 @@
 }
 
 .line {
-    width: 100%;
     height: 4px;
     background-color: #E6E6F0;
     margin-bottom: 15px;
@@ -136,6 +135,7 @@
         margin-left: auto;
         margin-right: auto;
         padding: 0;
+        padding-top: 30px;
     }
 }
 
