--- a/assets/SASS/_to_tell.scss
+++ b/assets/SASS/_to_tell.scss
@@ -76,6 +76,7 @@
     line-height: 22px;
     color: #000000;
     margin: 0;
+    width: 255px;
 }
 
 @media (min-width:768px) {
@@ -107,6 +108,14 @@
     .tell_link_active {
         margin-bottom: 10px;
     }
+
+    .text_box {
+        width: 249px;
+    }
+
+    .text_box_big {
+        width: 588px;
+    }
 }
 
 @media (min-width:1024px) {
@@ -127,6 +136,16 @@
     .card:last-child {
         width: calc(33.33% - 15px)
     }
+
+    .text_box {
+        width: 221.33px;
+    }
+}
+
+@media (min-width:1440px) {
+    .text_box {
+        width: 360px;
+    }
 }
 
 @media (min-width:1920px) {
@@ -136,6 +155,10 @@
         margin-right: auto;
         padding: 0;
         padding-top: 30px;
+    }
+
+    .text_box {
+        width: 453.33px;
     }
 }
 
