--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1117,14 +1117,6 @@ body {
   z-index: 5;
 }
 
-.symbol {
-  position: absolute;
-  z-index: -5;
-  width: 100%;
-  height: 100vh;
-  background-size: cover;
-}
-
 .active_lang {
   padding: 5px 7px;
   background-color: #F0145A;
@@ -1167,18 +1159,25 @@ body {
 
 .main_page {
   margin-bottom: 30px;
+  height: 100vh;
 }
 
 .main_page_box {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  height: 100%;
   content: "";
-  background-image: url(../images/heder/Symbol.svg);
+  background-image: url(../images/main_page/Symbol.svg);
   background-size: cover;
-  background-position-x: 100%;
+  background-position-x: center;
   background-repeat: no-repeat;
+}
+
+.heder_box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .main_hero {
@@ -1216,6 +1215,11 @@ body {
   border: 2px solid #FFFFFF;
 }
 
+@media (min-width: 1024px) {
+  .main_page_box {
+    background-size: contain;
+  }
+}
 .wrapper_nav {
   width: auto;
   padding-left: 30px;
