--- a/assets/SASS/_heder.scss
+++ b/assets/SASS/_heder.scss
@@ -13,13 +13,13 @@
     z-index: 5;
 }
 
-.symbol {
-    position: absolute;
-    z-index: -5;
-    width: 100%;
-    height: 100vh;
-    background-size: cover;
-}
+// .symbol {
+//     position: absolute;
+//     z-index: -5;
+//     width: 100%;
+//     height: 100vh;
+//     background-size: cover;
+// }
 
 .active_lang{
     padding: 5px 7px;
@@ -60,3 +60,8 @@
     padding-right: 22px;
     padding-left: 15px;
 }
+
+
+// @media (min-width:768px) {
+
+// }
