--- a/assets/SASS/_footer.scss
+++ b/assets/SASS/_footer.scss
@@ -1,3 +1,7 @@
+.footer {
+    background: #F5F5FA;
+}
+
 .footer_wrapper {
     margin-right: 30px;
     margin-left: 30px;
@@ -9,7 +13,6 @@
 }
 
 .footer_line {
-    width: 100%;
     height: 2px;
     background: #E6E6F0;
     margin-bottom: 30px;
