--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -931,6 +931,10 @@ body {
   }
 }
 @media (min-width: 1024px) {
+  .wrapper_team {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
   .grey_bg {
     display: flex;
   }
@@ -1123,6 +1127,11 @@ body {
   text-align: center;
   letter-spacing: 1px;
   padding: 5px 7px 5px 7px;
+}
+
+.lang a:active {
+  background-color: #F0145A;
+  border-radius: 8px;
 }
 
 .heder_none {
@@ -1659,6 +1668,7 @@ body {
   color: #323264;
   margin: 0;
   margin-bottom: 10px;
+  text-decoration: none;
 }
 
 .separator {
