--- a/assets/SASS/_heder.scss
+++ b/assets/SASS/_heder.scss
@@ -36,6 +36,11 @@
     padding: 5px 7px 5px 7px;
 }
 
+.lang a:active {
+    background-color: #F0145A;
+    border-radius: 8px;
+}
+
 .heder_none {
     display: none;
 }
