--- a/assets/SASS/_team.scss
+++ b/assets/SASS/_team.scss
@@ -100,6 +100,11 @@
 }
 
 @media (min-width:1024px) {
+    .wrapper_team {
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+    
     .grey_bg {
         display: flex;
     }
