--- a/assets/SASS/_burger_menu.scss
+++ b/assets/SASS/_burger_menu.scss
@@ -21,13 +21,16 @@
     padding: 12px;
     flex-direction: column;
     text-align: center;
+    width: calc(100% - 24px);
 }
 
 .drop_box {
     position: absolute;
     display: none;
-    right: calc(100% - 20px);
+    right: -16px;
     padding-top: 30px;
+    z-index: 10;
+    width: 359px;
 }
 
 .dropdown_links a {
@@ -40,7 +43,6 @@
     text-decoration: none;
     background: #F5F5FA;
     border-radius: 12px;
-    width: 335px;
     padding-top: 7px;
     padding-bottom: 7px;
     margin-bottom: 15px;
