--- a/assets/SASS/_main_page.scss
+++ b/assets/SASS/_main_page.scss
@@ -55,9 +55,9 @@
     margin-bottom: 30px;
 }
 
-.button_arrow {
-    border: 2px solid #FFFFFF;
-}
+// .button_arrow {
+//     border: 2px solid #FFFFFF;
+// }
 
 @media (min-width:768px) {
     .main_page {
