--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -573,6 +573,7 @@ body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
   font-style: normal;
+  position: relative;
 }
 
 .card_1 {
@@ -926,8 +927,8 @@ body {
 
 @media (min-width: 768px) {
   .hero_team {
-    font-size: 42px;
-    line-height: 46px;
+    font-size: 38px;
+    line-height: 46.32px;
   }
 }
 @media (min-width: 1024px) {
@@ -942,6 +943,14 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+  .hero_team {
+    width: 444px;
+  }
+}
+@media (min-width: 1024px) {
+  .hero_team {
+    width: auto;
   }
 }
 @media (min-width: 1920px) {
@@ -1103,7 +1112,12 @@ body {
   justify-content: space-between;
   align-items: center;
   background: rgba(245, 245, 250, 0.2);
-  z-index: 5;
+}
+
+.heder_box_mobile {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .active_lang {
@@ -1164,30 +1178,44 @@ body {
   .heder_none {
     display: block;
   }
-  .high_heder {
-    justify-content: left;
-    gap: 6px;
-  }
   .heder_box {
-    padding-top: 50px;
+    display: grid;
+    grid-template-columns: 1fr;
     padding-left: 60px;
     padding-right: 60px;
-    gap: 30px;
-  }
-  .high_heder {
-    background: none;
+    padding-top: 50px;
+    row-gap: 30px;
   }
   .lang {
     padding: 0;
   }
-  .tel {
-    padding: 0;
+  .high_heder {
+    background: none;
+    gap: 6px;
+    justify-content: start;
   }
-  .lower_heder {
-    padding: 0;
-  }
-  .burger_menu {
+  .heder_box_mobile {
     display: none;
+  }
+  .heder_tel {
+    padding: 0;
+  }
+}
+@media (min-width: 1024px) {
+  .heder_box {
+    grid-template-columns: 130px auto;
+    grid-auto-rows: auto;
+    grid-template-areas: "logo heder" "logo burger_menu";
+    justify-content: space-between;
+  }
+  .logo {
+    grid-area: logo;
+  }
+  .high_heder {
+    grid-area: heder;
+  }
+  .open_burger_menu {
+    grid-area: burger_menu;
   }
 }
 @media (min-width: 1920px) {
@@ -1195,12 +1223,11 @@ body {
     width: 1600px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
 .main_page {
-  margin-bottom: 30px;
   height: 100vh;
 }
 
@@ -1215,12 +1242,6 @@ body {
   background-position-x: center;
   background-repeat: no-repeat;
   position: relative;
-}
-
-.heder_box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 .main_hero {
@@ -1257,13 +1278,10 @@ body {
 }
 
 @media (min-width: 768px) {
-  .main_page {
-    margin-bottom: 60px;
-  }
   .main_hero {
     left: calc(50% - 400px);
     top: calc(50% - 23px);
-    width: 800px;
+    width: 780px;
   }
 }
 @media (min-width: 1024px) {
@@ -1280,9 +1298,7 @@ body {
 .nav_box {
   display: flex;
   align-items: center;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 30px;
+  padding: 30px 0 30px 30px;
   overflow-x: auto;
   white-space: nowrap;
 }
@@ -1360,9 +1376,7 @@ body {
     padding-right: 60px;
   }
   .nav_box {
-    padding-left: 60px;
-    padding-right: 60px;
-    padding-bottom: 60px;
+    padding: 60px 0 60px 60px;
   }
   .line_box {
     padding-left: 60px;
@@ -1387,8 +1401,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding: 60px 60px 0 60px;
   }
   .nav_line {
     display: none;
@@ -1434,12 +1447,27 @@ body {
     margin-right: auto;
   }
 }
+.veil {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(50, 50, 100, 0.7);
+  display: none;
+}
+
 .contact_form {
-  background-color: #F5F5FA;
+  background-color: rgb(245, 245, 250);
   display: flex;
   flex-direction: column;
   width: calc(100% - 60px);
+  max-width: 590px;
   padding: 30px 30px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .first_block_form {
@@ -1550,7 +1578,6 @@ body {
 }
 
 .burger_menu_dropdown {
-  position: relative;
   display: inline-block;
 }
 
@@ -1561,16 +1588,18 @@ body {
   padding: 12px;
   flex-direction: column;
   text-align: center;
-  width: calc(100% - 24px);
+  width: 335px;
 }
 
 .drop_box {
   position: absolute;
   display: none;
-  right: -16px;
   padding-top: 30px;
   z-index: 10;
   width: 359px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, 0%);
 }
 
 .dropdown_links a {
