--- a/assets/SASS/_contact_form.scss
+++ b/assets/SASS/_contact_form.scss
@@ -1,9 +1,23 @@
+.veil {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color:rgba(50, 50, 100, 0.7);
+    display: none;    
+}
 .contact_form {
-    background-color: #F5F5FA;
+    background-color: rgba(245, 245, 250, 1);
     display: flex;
     flex-direction: column;
     width: calc(100% - 60px);
+    max-width: calc(650px - 60px);
     padding: 30px 30px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .first_block_form {
