--- a/assets/SASS/_nav.scss
+++ b/assets/SASS/_nav.scss
@@ -7,9 +7,7 @@
 .nav_box {
     display: flex;
     align-items: center;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
+    padding: 30px 0 30px 30px;
     overflow-x: auto;
     white-space: nowrap;
 }
@@ -62,6 +60,7 @@
     background: rgba(255, 255, 255, 0.3);
     display: block;
 }
+
 .nav_h2 {
     font-weight: 700;
     font-size: 20px;
@@ -87,9 +86,7 @@
     }
     
     .nav_box {
-        padding-left: 60px;
-        padding-right: 60px;
-        padding-bottom: 60px;
+        padding: 60px 0 60px 60px;
     }
 
     .line_box {
@@ -119,8 +116,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        padding-left: 60px;
-        padding-right: 60px;
+        padding: 60px 60px 0 60px;
     }
 
     .nav_line {
