--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -576,6 +576,10 @@ body {
   position: relative;
 }
 
+.identifying {
+  display: none;
+}
+
 .card_1 {
   background-image: url("../images/partners/1.png");
   background-repeat: no-repeat;
@@ -1207,6 +1211,7 @@ body {
     grid-auto-rows: auto;
     grid-template-areas: "logo heder" "logo burger_menu";
     justify-content: space-between;
+    align-items: center;
   }
   .logo {
     grid-area: logo;
@@ -1359,6 +1364,8 @@ body {
   color: #FFFFFF;
   margin: 0;
   margin-bottom: 30px;
+  border-top: solid 4px rgba(255, 255, 255, 0.3);
+  padding-top: 30px;
 }
 
 .nav_text {
@@ -1378,14 +1385,10 @@ body {
   .nav_box {
     padding: 60px 0 60px 60px;
   }
-  .line_box {
-    padding-left: 60px;
-    padding-right: 60px;
-    margin-bottom: 60px;
-  }
   .nav_h2 {
     font-size: 30px;
     line-height: 37px;
+    padding-top: 60px;
   }
   .hero_nav {
     font-size: 38px;
@@ -1406,18 +1409,14 @@ body {
   .nav_line {
     display: none;
   }
-  .line_box {
-    width: 4px;
-    height: 303px;
-    padding: 0;
-    border-right: 3px solid rgba(255, 255, 255, 0.3);
-    margin-bottom: 0;
-  }
   .nav_box {
     flex-direction: column;
     overflow: visible;
     padding: 0;
-    margin-right: 60px;
+    padding-right: 60px;
+    border-right: 3px solid rgba(255, 255, 255, 0.3);
+    padding-top: 15px;
+    padding-bottom: 15px;
   }
   .hero_nav:last-child {
     margin-bottom: 0;
@@ -1430,6 +1429,10 @@ body {
   }
   .hero_nav:first-child {
     margin-left: auto;
+  }
+  .nav_h2 {
+    padding-top: 0;
+    border: none;
   }
 }
 @media (min-width: 1440px) {
