--- a/assets/SASS/_heder.scss
+++ b/assets/SASS/_heder.scss
@@ -114,6 +114,7 @@
             "logo burger_menu"
             ;
         justify-content: space-between;
+        align-items: center;
     }
 
     .logo {
