--- a/assets/SASS/_footer.scss
+++ b/assets/SASS/_footer.scss
@@ -63,6 +63,7 @@
 
 .footer_map {
     margin-bottom: 21px;
+    text-decoration: none;
 }
 
 .resolution_357_footer {
@@ -80,10 +81,12 @@
 .footer_tel {
     color: #46466E;
     margin-bottom: 10px;
+    text-decoration: none;
 }
 
 .contact {
     margin-bottom: 30px;
+    text-decoration: none;
 }
 
 .footer_text_light {
