--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1726,6 +1726,7 @@ body {
 
 .footer_map {
   margin-bottom: 21px;
+  text-decoration: none;
 }
 
 .resolution_357_footer {
@@ -1743,10 +1744,12 @@ body {
 .footer_tel {
   color: #46466E;
   margin-bottom: 10px;
+  text-decoration: none;
 }
 
 .contact {
   margin-bottom: 30px;
+  text-decoration: none;
 }
 
 .footer_text_light {
